[gd_scene load_steps=6 format=3 uid="uid://biu88w163ploy"]

[ext_resource type="Script" path="res://game/cheats.gd" id="1_40coe"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ohfvt"]
content_margin_top = 5.0
content_margin_bottom = 5.0
color = Color(0.505882, 0.505882, 0.505882, 0.564706)
thickness = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lulvi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.160784, 0.160784, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okeqn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.180392, 0.180392, 0.180392, 0.384314)
expand_margin_left = 7.0
expand_margin_top = 7.0
expand_margin_right = 7.0
expand_margin_bottom = 7.0

[sub_resource type="Theme" id="Theme_soedi"]
HSeparator/styles/separator = SubResource("StyleBoxLine_ohfvt")
ItemList/styles/panel = SubResource("StyleBoxFlat_lulvi")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_okeqn")

[node name="Cheats" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
theme = SubResource("Theme_soedi")
script = ExtResource("1_40coe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 75.0
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CurrentPageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "current page:"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Facts"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="FactsList" type="ItemList" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(184.3, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
select_mode = 1
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Facts" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FactValueButton" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Facts"]
layout_mode = 2
focus_mode = 0
text = "fact value"

[node name="ChangeFactButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Facts"]
layout_mode = 2
focus_mode = 0
text = "apply to selected facts"

[node name="ResetFacts" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Facts"]
layout_mode = 2
focus_mode = 0
text = "reset facts"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Pages" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2
text = "Pages"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2

[node name="PageSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LineSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PageKeyLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2

[node name="LoadPageButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2
text = "Load Page"

[node name="ReadLineButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2
focus_mode = 0
text = "Read Line"

[node name="FFButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages"]
layout_mode = 2
focus_mode = 0
text = "FF"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Timing"
horizontal_alignment = 1

[node name="AutoContinueCheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Auto Continue"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Facts/ChangeFactButton" to="." method="_on_change_fact_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Facts/ResetFacts" to="." method="_on_reset_facts_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/HBoxContainer/PageSpinBox" to="." method="_on_page_spin_box_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/LoadPageButton" to="." method="_on_load_page_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/ReadLineButton" to="." method="_on_read_line_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Pages/FFButton" to="." method="_on_ff_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/AutoContinueCheckButton" to="." method="_on_auto_continue_check_button_pressed"]
